--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.2.2
+ipython==8.6.0
 notebook==6.5.2
 opencv-python
 certifi==2020.6.20
