--- a/requirements.txt
+++ b/requirements.txt
@@ -4,23 +4,19 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.2.2
-ipython==8.6.0
-opencv-python
-certifi==2020.6.20
-chardet==3.0.4
+joblib==1.2.0
+sklearn==0.0
+
+
+
 click==8.1.3
-cmake==3.18.2.post1
-decorator==4.4.2
-dlib==19.18.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-idna==2.10
-imageio==2.9.0
-imageio-ffmpeg==0.4.2
-moviepy==1.0.3
-opencv-python==4.4.0.46
-Pillow==8.0.1
-proglog==0.1.9
+
+
+
+
+
+
+
 requests==2.24.0
 tqdm==4.51.0
 urllib3==1.25.11
@@ -29,7 +25,7 @@ Flask-Session==0.4.0
 seaborn==0.12.1
 matplotlib>=3.1
 numpy==1.23.4
-scipy>=0.15.1
-scikit-learn==1.0.2
+scipy==1.9.3
+scikit-learn==1.1.2
 matplotlib>=1.4.3
 pandas>=0.19
